--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,16 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Firebase
+.firebase/
+firebase-debug.log
+functions/firebase-debug.log
 
 npm-debug.log*
 yarn-debug.log*
